[package]
name = "png_payload_injector"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/acuciureanu/png-payload-injector"

[dependencies]
rand = "0.8.5"
flate2 = "1.0.31"
crc = "3.2.1"
rayon = "1.10.0"
base64 = "0.22.1"
clap = { version = "^4.5.15", features = ["derive"] }
clap_derive = "4.5.13"

[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.20.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Whether to install an updater program
install-updater = false
